# LLM-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  FRONTEND_API_README.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_rag.py
config/: settings.py
data/: doc_mapping.json  finetune_dataset.json  processed_documents.json
data/lora-nust-bank/: README.md  adapter_config.json
frontend/: app.py
report/: report.tex  report2.tex
src/: __init__.py  build_index.py  data_preprocessing.py  finetune.py  generate_finetune_data.py  rag_pipeline.py
src/api/: __init__.py  main.py  models.py  routes.py  service.py
tests/: test_preprocessing.py  test_rag_pipeline.py
