[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nust-bank-rag"
version = "0.1.0"
description = "NUST Bank Customer Service Assistant — RAG pipeline with Llama 3.2"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "transformers==4.46.3",
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0",
    "openpyxl==3.1.5",
    "numpy==1.26.4",
    "accelerate==1.2.1",
    "bitsandbytes==0.45.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
